--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <script src="./inchTofeet.js"></script>
+    <script src="./array-condition-example.js"></script>
 </body>
 </html>
