leap year calculation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>index</title>
 </head>
 <body>
-    <script src="./inchTofeet.js"></script>
-    <script src="./array-condition-example.js"></script>
+    <!-- <script src="./inchTofeet.js"></script>
+    <script src="./array-condition-example.js"></script> -->
+    <!-- <script src="./even-odd-checker.js"></script> -->
+    <script src="./leap-year-check.js"></script>
 </body>
 </html>
