--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="./inchTofeet.js"></script>
     <script src="./array-condition-example.js"></script> -->
     <!-- <script src="./even-odd-checker.js"></script> -->
-    <script src="./leap-year-check.js"></script>
+    <!-- <script src="./leap-year-check.js"></script> -->
+    <script src="./calculate-factorial.js"></script>
 </body>
 </html>
